[gd_scene load_steps=6 format=2]

[ext_resource path="res://Volleyball.gd" type="Script" id=1]
[ext_resource path="res://Bump.gd" type="Script" id=2]
[ext_resource path="res://Set.gd" type="Script" id=3]
[ext_resource path="res://Spike.gd" type="Script" id=4]
[ext_resource path="res://mnubutton.gd" type="Script" id=5]

[node name="VolleyBall" type="Node2D"]
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 6.0
margin_top = 449.0
margin_right = 487.0
margin_bottom = 594.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Formation" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 481.0
margin_bottom = 121.0
size_flags_horizontal = 5
size_flags_vertical = 3
alignment = 1

[node name="1" type="PanelContainer" parent="VBoxContainer/Formation"]
margin_right = 157.0
margin_bottom = 121.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/Formation/1"]
margin_left = 7.0
margin_top = 53.0
margin_right = 150.0
margin_bottom = 67.0
align = 1
script = ExtResource( 2 )

[node name="2" type="PanelContainer" parent="VBoxContainer/Formation"]
margin_left = 161.0
margin_right = 319.0
margin_bottom = 121.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/Formation/2"]
margin_left = 7.0
margin_top = 53.0
margin_right = 151.0
margin_bottom = 67.0
align = 1
script = ExtResource( 3 )

[node name="3" type="PanelContainer" parent="VBoxContainer/Formation"]
margin_left = 323.0
margin_right = 481.0
margin_bottom = 121.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/Formation/3"]
margin_left = 7.0
margin_top = 53.0
margin_right = 151.0
margin_bottom = 67.0
align = 1
script = ExtResource( 4 )

[node name="Players" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 125.0
margin_right = 481.0
margin_bottom = 145.0
size_flags_horizontal = 7
size_flags_vertical = 4

[node name="A" type="Button" parent="VBoxContainer/Players"]
margin_right = 157.0
margin_bottom = 20.0
focus_neighbour_left = NodePath("../C")
focus_neighbour_right = NodePath("../B")
size_flags_horizontal = 15
text = "Player A"
script = ExtResource( 5 )

[node name="B" type="Button" parent="VBoxContainer/Players"]
margin_left = 161.0
margin_right = 319.0
margin_bottom = 20.0
focus_neighbour_left = NodePath("../A")
focus_neighbour_right = NodePath("../C")
size_flags_horizontal = 3
text = "Player B"
script = ExtResource( 5 )

[node name="C" type="Button" parent="VBoxContainer/Players"]
margin_left = 323.0
margin_right = 481.0
margin_bottom = 20.0
focus_neighbour_left = NodePath("../B")
focus_neighbour_right = NodePath("../A")
size_flags_horizontal = 3
text = "Player C"
script = ExtResource( 5 )

[connection signal="Select_1" from="." to="VBoxContainer/Formation/1/Label" method="_on_VolleyBall_Select_1"]
[connection signal="Select_2" from="." to="VBoxContainer/Formation/2/Label" method="_on_VolleyBall_Select_2"]
[connection signal="Select_3" from="." to="VBoxContainer/Formation/3/Label" method="_on_VolleyBall_Select_3"]
[connection signal="disableA" from="." to="VBoxContainer/Players/A" method="_on_VolleyBall_disableA"]
[connection signal="disableB" from="." to="VBoxContainer/Players/B" method="_on_VolleyBall_disableB"]
[connection signal="disableC" from="." to="VBoxContainer/Players/C" method="_on_VolleyBall_disableC"]
[connection signal="enableA" from="." to="VBoxContainer/Players/A" method="_on_VolleyBall_enableA"]
[connection signal="enableB" from="." to="VBoxContainer/Players/B" method="_on_VolleyBall_enableB"]
[connection signal="enableC" from="." to="VBoxContainer/Players/C" method="_on_VolleyBall_enableC"]
[connection signal="pressed" from="VBoxContainer/Players/A" to="." method="_on_A_pressed"]
[connection signal="pressed" from="VBoxContainer/Players/B" to="." method="_on_B_pressed"]
[connection signal="pressed" from="VBoxContainer/Players/C" to="." method="_on_C_pressed"]
